--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -29,31 +29,31 @@
 	} 
 }
 .none-content{
-    float: left;
-    position: relative;
-    left: 50%;
-    .nc-center{
-        position: relative;
-        left: -50%;
-        text-align: center;
-        margin-top: 25px;
-        img{
-            _float: left;
-            _margin-right: 240px;
-        }
-        p{
-            _float: none;
-            _width: 120px;
-            margin-top: 20px;
-            line-height: 35px;
-            font-family: "Microsoft YaHei";
-            font-size: 16px;
-            em{
-                font-style: normal;
-                color: #e74c3c;
-            }
-        }
-    }
+	float: left;
+	position: relative;
+	left: 50%;
+	.nc-center{
+		position: relative;
+		left: -50%;
+		text-align: center;
+		margin-top: 25px;
+		img{
+			_float: left;
+			_margin-right: 240px;
+		}
+		p{
+			_float: none;
+			_width: 120px;
+			margin-top: 20px;
+			line-height: 35px;
+			font-family: "Microsoft YaHei";
+			font-size: 16px;
+			em{
+				font-style: normal;
+				color: #e74c3c;
+			}
+		}
+	}
 }
 .glory-grades-wrap{
 	width: 1190px;
@@ -165,7 +165,6 @@
 			position: relative;
 			width: 210px;
 			font-size: 12px;
-			height: 68px;
 			p{
 				margin-bottom: 0;
 				line-height: 18px;
@@ -177,10 +176,10 @@
 				overflow: hidden;
 				width: 100px;
 			}
-			.teachers{
-				height: 18px;
-				overflow: hidden;
-			}
+			// .teachers{
+			// 	height: 18px;
+			// 	overflow: hidden;
+			// }
 			.grades{
 				width: 210px;
 				height: 18px;
@@ -216,6 +215,9 @@
 	position: absolute;
 	width: 290px;
 	z-index: 900;
+	.hasborder_1{
+		border-bottom: 1px dashed #cccccc;
+	}
 }
 .glory_window_come{
 	.window_arrow {
@@ -253,7 +255,6 @@
 		}
 	}
 }
-
 .wrapper_body {
 	margin: 0 auto;
 	padding: 0;
