--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -509,7 +509,30 @@
 			}
 		}
 }
-
+.ui-comment-items {
+	position: relative; z-index: 10;
+	.Extend_add_gold {
+		width:110px;
+        height:150px;
+		position: absolute;
+        left: 395px; 
+        bottom: 0;
+        opacity : 0;
+        background: url("http://img04.xesimg.com/add_gold.png") no-repeat;
+		p {
+            width:105px;
+            height: 20px;
+            text-align: center;
+            margin-top: 104px;
+            color: #666;
+            font-size: 14px;
+            font-weight: bold;
+            strong{
+                color: #cc0000;
+            }
+        }
+	}
+}
 /*
  * CSS Styles that are needed by jScrollPane for it to operate correctly.
  *模拟听课页---讲节列表过多时的滚动条
