--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -128,7 +128,6 @@
 		padding: 9px;
 		img{
 			width: 270px;
-			height: 270px;
 		}
 		p{
 			font-size: 12px;
@@ -137,6 +136,7 @@
 			margin-top: 15px;
 			overflow: hidden;
 			margin-bottom: 5px;
+			word-break: break-all;
 		}
 	}
 	.water-option {
