--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -262,6 +262,7 @@
         .center-info-fans-num {
             margin: 0 auto;
             width: 75px;
+            height: 18px;
             overflow: hidden;
         }
     }
@@ -269,6 +270,7 @@
         .center-info-all;
         .center-info-newThing-num {
             width: 76px;
+            height: 18px;
             margin: 0 auto;
             overflow: hidden;
         }
@@ -285,6 +287,7 @@
         }
         .center-info-stud-num {
             width: 75px;
+            height: 18px;
             margin: 0 auto;
             overflow: hidden;
         }
@@ -297,6 +300,7 @@
         text-align: center;
         .center-info-fans-office-num {
             width: 115px;
+            height: 18px;
             margin: 0 auto;
             overflow: hidden;
         }
@@ -308,6 +312,7 @@
         text-align: center;
         .center-info-newThing-office-num {
             width: 115px;
+            height: 18px;
             margin: 0 auto;
             overflow: hidden;
         }
