--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -81,7 +81,7 @@
 							ul.select-list{
 								width:230px;overflow: hidden;margin:0;padding:0;background: url(img/scroll_ul.jpg) 22px 0 repeat-y;
 								li.scrolls_title {
-									height: 41px;line-height: 41px;border-bottom: 1px solid #e9e9e9;background: url(img/tingkeyebg.jpg) repeat-y;padding-left: 20px;padding-right: 10px; font-size: 14px;overflow: hidden;
+									height: 41px;line-height: 41px;border-bottom: 1px solid #e9e9e9;background: url(img/tingkeyebg.jpg) repeat-y;padding-left: 20px;padding-right: 20px; font-size: 14px;overflow: hidden;
 								}
 				                  li {
 				                  	 padding-left: 42px;background: url(img/scroll_li.jpg) 28px 20px no-repeat;position: relative;
@@ -150,14 +150,14 @@
 			   }
 		}
 		//看点
-		.look-focus-item {
+		.lookFocusItem {
 			height: 60px;border-radius: 2px;background: #fff;
 		    //左侧显示看点和发布看点输入框
-		    .look-focus-left {
+		    .lookFocusLeft {
 		    	float: left;display: inline;width: 750px;height: 30px;margin-top: 15px;padding-left: 10px;position: relative;
-		    	.look-focus-show {
+		    	.lookFocusShow {
 		    		overflow: hidden;line-height: 30px;display: block;
-		    		.focus-content {
+		    		.focusCon {
 		    			float: left;display: inline;
 		    			span.name {float: left;height:30px;overflow: hidden;color: #666666;}
 		    			span.text {
@@ -165,22 +165,22 @@
 		    				b {color: #006699;}
 		    			}
 		    			a {float: left;padding-right:10px;}
-		    			.js-reply {display: none;}
-		    			.js-informant {display: none;}
+		    			.js_reply {display: none;}
+		    			.js_informant {display: none;}
 		    		}
 		    		.focusAffirm {float: left;display: inline;}
 		    		
 		    	}
-		    	.look-Focus-Push {
+		    	.lookFocusPush {
 		    		display: none;overflow: hidden;line-height: 30px;
-		    		.time-end {float: left;display: inline;width: 85px;background: url('img/icon_time.png') 0 5px no-repeat;padding-left: 25px;}
-		    		.input-text {
+		    		.timeEnd {float: left;display: inline;width: 85px;background: url('img/icon_time.png') 0 5px no-repeat;padding-left: 25px;}
+		    		.inputText {
 		    			float: left;display: inline;width: 475px; height: 30px;border: 1px solid #ededed;background: #fcfcfc;padding:0 5px;
 		    		}
-		    		.btn-submit {
-		    			float: left;display: inline;width: 95px;height: 30px;border: 1px solid #ededed;background: #3399cc;margin:0 5px;color: #fff;
+		    		.btn_submit {
+		    			float: left;display: inline;width: 95px;height: 30px;border: 1px solid #ededed;background: #3399cc;margin:0 5px;color: #fff;padding:0;
 		    		}
-		    		.btn-cancel {
+		    		.btn_cancel {
 		    			float: left;display: inline;width: 58px;height: 28px;line-height: 28px; border: 1px solid #ededed;background: #fcfcfc;text-align: center;
 		    		}
 		    		span.errorTips {
@@ -190,26 +190,26 @@
 		    			width: 150px;height: 40px;line-height:40px;border-radius: 3px; position: absolute;left:105px;top:-5px;z-index: 10;color: #999;
 		    		}
 		    	}
-		    	.push-succeed {
+		    	.pushSucceed {
 		    		display: none;width: 750px;height: 30px;background: #fff; position: absolute;left: 10px;top:0;z-index: 10;color: #666;
 		    		em {padding-right: 10px;font-style: normal;}
-		    		span.btn-succeed {display:inline-block;width:155px;height:28px;line-height:28px;text-align: center; border: 1px solid #ededed;background: #fcfcfc;margin-left: 10px;color: #999;}
+		    		span.btnSucceed {display:inline-block;width:155px;height:28px;line-height:28px;text-align: center; border: 1px solid #ededed;background: #fcfcfc;margin-left: 10px;color: #999;}
 		    	}
 		    }
 		    //右侧发布看点和总看点数
-		    .look-focus-right {
+		    .lookFocusRight {
 		    	float: right;display: inline;width: 200px;height: 30px;overflow: hidden;margin-top: 15px;
-		    	.button-left {
+		    	.button_left {
 		    		float: left;display: inline;overflow: hidden;width: 80px;height: 30px;margin-right: 20px;
 		    		button {
 		    			display:block;width: 80px;height: 30px;background: url(img/btn_look.png) no-repeat;text-indent: -99999em;border:0;
 		    		}
-		    		button.btn-disabled {background: url(img/btn_look_no.png) no-repeat;}
+		    		button.btn_disabled {background: url(img/btn_look_no.png) no-repeat;}
 		    	}
-		    	.look-right {
+		    	.look_right {
 		    		float: left;display: inline;width: 65px;height:30px;line-height: 30px; overflow: hidden;background: url(img/lookIcon_03.png) no-repeat;padding-left: 35px;font-family: arial;font-size: 14px;
 		    	}
-		    	span.look-right {color: #999;}
+		    	span.look_right {color: #999;}
 		    }
 		}
 #xuebox_focusTips {
@@ -219,6 +219,70 @@
              color: #cc0000;font-size: 12px;font-weight: normal;
         }
     }   
+}
+        //看点例表
+        .lookFocusListCon {
+            overflow: hidden;width: 720px;margin:10px auto;
+            .ui_focus {
+                overflow: hidden;border-bottom: 1px dashed #ededed;margin-bottom: 10px;
+                .focus_avatar {
+                    float: left;display: inline; width:50px;overflow: hidden;margin-right: 10px;
+                    img{width: 50px;height: 50px;}
+                }
+                .focus_detail {
+                    overflow: hidden;float: left;display: inline;width: 650px;
+                    .focus_info {
+                        overflow: hidden;color: #333; height: 30px;
+                        em{font-size: 14px;color: #999;}
+                    }
+                    .focus_bar {
+                        overflow: hidden;height: 30px;line-height: 30px;
+                        .infoTime {
+                            float: left;display: inline; overflow: hidden;color: #999;font-size: 14px;background: url('img/icon_time.png') 0px 4px no-repeat;padding-left: 25px;
+                        }
+                        .infoDate {float: right;display: inline;overflow: hidden;color: #999;}
+                    }
+                }
+            }
+        }
+.lookFocus-content-item {
+     height: 700px;
+    .player-live {
+        height: 700px;
+    }
+    .player-list {
+        height: 700px;
+        .lookFocus_title {
+                height: 36px;
+                line-height: 36px;
+                overflow: hidden;
+                font-size: 14px;
+                color: #333;
+                padding-left: 20px;
+                background: url("http://img04.xesimg.com/scroll/tab_title_bg_03.jpg") no-repeat;
+        }
+        .ui-scrolls-boxs{
+            .scrolls-item{
+                height: 650px;
+                ul {
+                    li {
+                        a {
+                            width:50px;
+                        }
+                    }
+                }
+            }
+        }
+        .look-num{
+            float:right;
+            display: block;
+            width: 50px;
+            position: absolute;
+            right: 0;
+            top: 0;
+            color: #999;
+        }
+    }
 }
 		// 看点end
 //浮边的签到和问老师
