--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -36,6 +36,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-card-box-over,.gold-store-present-card-box,.gold-exchange-present-card-box{width: 936px;overflow: hidden;}
 .gold-store-card,.gold-store-present-card,.gold-exchange-present-card{position: relative;width: 217px;height: 344px;background-color: #fff;border-radius: 5px;overflow: hidden;float: left;margin: 10px 7px 3px;}
 .gold-store-card-img-box,.gold-store-present-img-box,.gold-exchange-present-img-box{height: 164px;line-height: 164px;text-align: center;}
+.gold-store-card-img-box img,.gold-store-present-img-box img,.gold-exchange-present-img-box img{max-width: 200px;max-height: 140px;}
 .gold-store-card-price-box{width: 200px;font-size: 12px;color: #999;margin: 0 auto;overflow: hidden;}
 .gold-store-card-price{float: left;}
 .gold-store-card-price em{margin-left: 10px;font-size: 16px;color: #e74c3c;font-weight: bold;}
@@ -101,5 +102,5 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-card-empty,.gold-store-present-empty {width: 100px;height: 34px;background-color: #999999;margin: 28px auto;text-align: center;font-size: 14px;line-height: 34px;color: #fff;border-radius: 3px;cursor: pointer;}
 .gold-tip-alert{color: #e74c3c !important;margin-right: 5px;}
 .gold-modal-img{float: left;width: 330px;height: 198px;display: inline-block;line-height: 198px;text-align: center;}
-
+.gold-modal-img img{max-width:240px;max-height: 208px;};
 
