--- a/source/widget/UM.Basic.information/basic-information.less
+++ b/source/widget/UM.Basic.information/basic-information.less
@@ -46,7 +46,7 @@
                 height: 34px;
                 padding-left: 7px;
                 color: #a0a0a0;
-                border: 1px solid #dcdcdc;
+                border: 1px solid #d2d2d2;
                 &:focus {
                     border:1px solid #3bafda;
                 }
@@ -92,7 +92,7 @@
                 width: 260px;
                 margin: 0 0 1px 0;
                 padding: 8px 5px;
-                border: 1px solid #dcdcdc;
+                border: 1px solid #d2d2d2;
                 &:focus {
                     border:1px solid #3bafda;
                 }
