--- a/source/widget/UserHome.notice/notice.less
+++ b/source/widget/UserHome.notice/notice.less
@@ -1,6 +1,7 @@
 .notice-warp{
     margin: 0 auto;
     min-height: 598px;
+    padding-bottom: 28px;
     #notice-nm{
         display: block;
         width: 176px;
@@ -16,8 +17,7 @@
     }
     .notice-message{
         height:auto;
-        padding: 0 20px 15px 15px;
-        margin-bottom: 20px;
+        padding: 17px 20px 18px 15px;
         border-bottom: 1px solid #eaeaea;
         overflow: hidden;
         .notice-user{
