完善信息里 关注更改

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -778,6 +778,8 @@ ul,li{list-style: none;}
 		font-size: 12px;
 		list-style: outside none none;
 		padding: 0 13px;
+		border-right: 1px solid #fcfcfc;
+		border-left: 1px solid #fcfcfc;
 		a{
 			i{
 				color: #a1a2a1;
@@ -787,7 +789,6 @@ ul,li{list-style: none;}
 	}
 	li.popular-rank {
 		border-left: none;
-		padding: 0 20px;
 	}
 	li.active{
 		border-right: 1px solid #eaeaea;
