二B需求：取消禁用状态的鼠标图标

--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -1,4 +1,4 @@
-// out: ../css/default.css, compress: true, strictMath: true
+// out: ../css/default.css, compress: false, strictMath: true
 @header-color: #fc6e51;
 @bg-color: #fff;
 @font: #888;
@@ -329,3 +329,14 @@ button{
    }
 }
 /*首页公用标题样式和一些重构样式 结束位置*/ 
+
+
+
+.paginationjs-pages .pagination >.disabled>span, 
+.paginationjs-pages .pagination >.disabled>span:hover, 
+.paginationjs-pages .pagination >.disabled>span:focus, 
+.paginationjs-pages .pagination >.disabled>a, 
+.paginationjs-pages .pagination >.disabled>a:hover, 
+.paginationjs-pages .pagination >.disabled>a:focus{
+    cursor: auto;
+}
