--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -103,4 +103,5 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-tip-alert{color: #e74c3c !important;margin-right: 5px;}
 .gold-modal-img{float: left;width: 330px;height: 198px;display: inline-block;line-height: 198px;text-align: center;}
 .gold-modal-img img{max-width:240px;max-height: 208px;};
-
+.modal_align{display: table;height: 100%;margin: 0px auto};
+#cardModal .modal-dialog{display: table-cell;vertical-align: middle;};
