--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -44,7 +44,7 @@
 		}
 		//课程视频和列表
 		.content-study-player {
-			height: 478px; background: #fff;border-radius: 2px;margin-bottom: 10px;
+			height: 478px; background: #fff;margin-bottom: 10px;
 			//课程视频
 			.player-live {
 				float:left;width:745px;height:465px;
