--- a/source/widget/UserHome.perfection/perfect-information.less
+++ b/source/widget/UserHome.perfection/perfect-information.less
@@ -157,6 +157,9 @@
 				color: #333;
 				display: block;
 				padding-left: 10px;
+				&:focus{
+					border: 1px solid #3bafda;
+				}
 			}
 			.errTips {
 				color: #cc0000;
