Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.wrongQues/error_question.less
+++ b/source/widget/UserHome.wrongQues/error_question.less
@@ -83,7 +83,7 @@
     color:rgb(153,153,153);
   }
   .que-head-href{
-    color:rgb(59,175,218);
+    color:#1e89e0;
     &:hover{
       text-decoration: underline;
     }
@@ -130,6 +130,9 @@
   .que-body-show-text{
     cursor: pointer;
     width: 70px;
+      &:hover{
+          color:#3bafda;
+      }
   }
     .que-body-img-lb{
         display:block;
