Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -372,6 +372,7 @@
     font-size: 12px;
     .center-teacher-verify {
         .verify-up-left;
+        border-right: none;
         background: url("img/teacher-verify.png") no-repeat;
     }
     .center-teacher-link {
