--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -12,6 +12,7 @@
 .live-course-hover{position: absolute;bottom: 0;height: 80px;}
 .live-course-content{width: 237px;position: absolute;top:12px;left: 10px;color: #fff;font-size: 14px;text-overflow: ellipsis}
 .live-course-box{position: relative;display: inline-block;}
+.live-course-box img{width: 271px;height: 198px;}
 .live-teacher-photo{margin-top: 11px;}
 .live-course-title{height: 30px;width: 245px;position: absolute;bottom: 0;background-color: #000;opacity: 0.5;}
 .live-course-show-title{height: 30px;width: 245px;position: absolute;bottom: 0;color: #fff;font-size: 14px;text-align: center;line-height: 30px;}
